--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@ __recovery/
 
 # Boss dependency manager vendor folder https://github.com/HashLoad/boss
 modules/
+*.inc
+Samples/Auth/Win32/Debug/keys.json
