--- a/VKComponents.dproj
+++ b/VKComponents.dproj
@@ -225,6 +225,7 @@
         <DCCReference Include="Entity\VK.Entity.Group.Longpoll.pas"/>
         <DCCReference Include="Entity\VK.Entity.Group.LongpollSettings.pas"/>
         <DCCReference Include="Entity\VK.Entity.Group.TokenPermissions.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Message.Chat.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
