--- a/VKComponents.dproj
+++ b/VKComponents.dproj
@@ -231,6 +231,7 @@
         <DCCReference Include="Controllers\VK.Newsfeed.pas"/>
         <DCCReference Include="Entity\VK.Entity.Newsfeed.pas"/>
         <DCCReference Include="Controllers\VK.Notifications.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Notifications.pas"/>
         <RcItem Include="Media\vk group 2.bmp">
             <ResourceType>BITMAP</ResourceType>
             <ResourceId>TVkGroupEventsController</ResourceId>
