Market 100%, refactor, fix

--- a/VKComponents.dproj
+++ b/VKComponents.dproj
@@ -230,6 +230,9 @@
         <DCCReference Include="Entity\VK.Entity.Subscription.pas"/>
         <DCCReference Include="Entity\VK.Entity.Group.Counters.pas"/>
         <DCCReference Include="Entity\VK.Entity.Audio.Catalog.pas"/>
+        <DCCReference Include="Entity\VK.Entity.ScreenName.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Market.Album.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Market.Order.pas"/>
         <RcItem Include="Media\vk group 2.bmp">
             <ResourceType>BITMAP</ResourceType>
             <ResourceId>TVkGroupEventsController</ResourceId>
