--- a/VKComponents.dproj
+++ b/VKComponents.dproj
@@ -235,6 +235,7 @@
         <DCCReference Include="Entity\VK.Entity.Market.Order.pas"/>
         <DCCReference Include="Controllers\VK.Orders.pas"/>
         <DCCReference Include="Controllers\VK.Pages.pas"/>
+        <DCCReference Include="Controllers\VK.Polls.pas"/>
         <RcItem Include="Media\vk group 2.bmp">
             <ResourceType>BITMAP</ResourceType>
             <ResourceId>TVkGroupEventsController</ResourceId>
