--- a/VKComponents.dproj
+++ b/VKComponents.dproj
@@ -267,6 +267,7 @@
         <DCCReference Include="Controllers\VK.Apps.pas"/>
         <DCCReference Include="Entity\VK.Entity.Login.pas"/>
         <DCCReference Include="VK.Clients.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Attachment.pas"/>
         <RcItem Include="Media\vk group 2.bmp">
             <ResourceType>BITMAP</ResourceType>
             <ResourceId>TVkGroupEventsController</ResourceId>
