--- a/VKComponents.dproj
+++ b/VKComponents.dproj
@@ -269,6 +269,8 @@
         <DCCReference Include="Entity\VK.Entity.Attachment.pas"/>
         <DCCReference Include="Controllers\VK.Donut.pas"/>
         <DCCReference Include="Entity\VK.Entity.Donut.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Auth.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Common.List.pas"/>
         <RcItem Include="Media\vk group 2.bmp">
             <ResourceType>BITMAP</ResourceType>
             <ResourceId>TVkGroupEventsController</ResourceId>
