--- a/VKComponents.dproj
+++ b/VKComponents.dproj
@@ -274,6 +274,7 @@
         <DCCReference Include="Entity\VK.Entity.Common.ExtendedList.pas"/>
         <DCCReference Include="Entity\VK.Entity.Group.Invites.pas"/>
         <DCCReference Include="VK.Errors.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Group.Status.pas"/>
         <RcItem Include="Media\vk group 2.bmp">
             <ResourceType>BITMAP</ResourceType>
             <ResourceId>TVkGroupEventsController</ResourceId>
@@ -331,7 +332,7 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployFile LocalName="..\..\..\..\Public\Documents\Embarcadero\Studio\20.0\Bpl\VKComponents.bpl" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="C:\Users\Public\Documents\Embarcadero\Studio\20.0\Bpl\VKComponents.bpl" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>VKComponents.bpl</RemoteName>
                         <Overwrite>true</Overwrite>
